# register-spf

./: .gitignore  Cargo.toml  db.sqlite
api/: Cargo.toml
api/src/: error.rs  lib.rs  model.rs
api/src/routes/: comment.rs  favorite.rs  font.rs  mod.rs  user.rs  version.rs
api/src/utilities/: auth.rs  mod.rs  r2.rs  ratelimit.rs  tasks.rs  token.rs  user.rs
api/src/utilities/validation/: account.rs  mod.rs  strings.rs
docs/: routes.md
entity/: Cargo.toml
entity/src/: access_tokens.rs  comments.rs  font_tags.rs  font_versions.rs  fonts.rs  lib.rs  mod.rs  prelude.rs  tags.rs  user_favorites.rs  users.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
