[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
anyhow = "1.0.102"
argon2 = "0.5.3"
check-if-email-exists = "0.11.7"
chrono = "0.4.44"
dashmap = "6.1.0"
dotenvy = "0.15.7"
mailchecker = "6.0.20"
minima-r2-sdk = "0.1.0"
password-hash = { version = "0.6.1", features = ["getrandom"] }
rand = "0.10.0"
rustrict = "0.7.38"
tokio = { workspace = true }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["cors"] }
sea-orm = { workspace = true, features = [
    "sqlx-sqlite",
    "runtime-tokio",
    "macros",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
spf = "=0.8.0-alpha.0"
tracing = "0.1"
tracing-subscriber = "0.3.0"
entity = { path = "../entity" }
